# lol

./: .env.production  .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  loop.ts  package.json  prettier.config.mjs  tsconfig.json  vite.config.ts
.claude/: CLAUDE.md  progress.txt
.github/workflows/: ci.yml
.loop/: 2026-03-02_034103-progress.txt  2026-03-02_034702-progress.txt  2026-03-02_035633-progress.txt  2026-03-02_040014-progress.txt  2026-03-02_040413-progress.txt  2026-03-02_045821-progress.txt
src/: App.tsx  app_types.ts  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/action_panel/: action_panel.scss  action_panel.test.tsx  (+4 more)
src/constants/: tag_colors.ts
src/data/: clipboard_data.ts  color_data.ts  emoji_data.ts  file_search_data.tsx  mock_data.ts  notes_data.ts  quicklinks_data.tsx  reminders_data.ts  settings_data.tsx  snippet_data.ts  translator_data.ts  window_layouts_data.tsx
src/extensions/: index.ts
src/hooks/: use_alert.ts  use_applications.ts  use_clipboard_history.ts  use_db_search.ts  use_debounce.ts  use_favorites.ts  use_hud.ts  use_keyboard_shortcut.ts  use_navigation.ts  use_recent_commands.ts  use_theme.ts  use_toast.ts  use_window.ts
src/platform/: index.ts  tauri.ts  types.ts  web.ts
src/registry/: command_registry.ts  commands.ts  index.ts  types.ts
src/styles/: _tokens.scss  global.scss
src/utils/: calculator.ts  clipboard.ts  database.ts  format_date.ts  format_file_size.ts  fuzzy_search.ts  open_url.ts  storage.ts
(+120 files in other folders)
