[package]
name = "raycast-clone"
version = "0.1.0"
description = "Raycast UI clone built with Tauri"
authors = ["@antoniopresto <antoniopresto@gmail.com>"]
license = "MIT"
repository = "https://github.com/antoniopresto/lol"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }

[target.'cfg(target_os = "macos")'.dependencies]
window-vibrancy = "0.7"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-clipboard-manager = "2"
